# OS-Labs

lab2/: CMakeLists.txt  main.cpp
lab_1/: CMakeLists.txt
lab_1/Creator/: creator.cpp  employee.h
lab_1/Main/: main.cpp
lab_1/Reporter/: reporter.cpp
lab_2/: CMakeLists.txt  main.cpp  tests.cpp
lab_3/: CMakeLists.txt  main.cpp
lab_3/include/: marker_app.hpp
lab_3/src/: main.cpp  marker_app.cpp
lab_3/test/: test_marker.cpp
lab_4/: CMakeLists.txt  input.txt  receiver.cpp  sender.cpp  shared_memory.h  test_message.cpp
lab_4/Receiver/: Receiver.cpp  message.h
lab_4/Sender/: Sender.cpp
lab_5/: CMakeLists.txt  test.txt
lab_5/include/: employee.h
lab_5/src/: client.cpp  server.cpp
lab_5/test/: test_employee.cpp
